<?xml version="1.0"?>
<package format="2">

  <name>motion_planning_real_world</name>
  <version>0.0.0</version>
  <description>The motion planner for real drones using mavros</description>

  <maintainer email="joao.felix.mendes@tecnico.ulisboa.pt">Joao Mendes</maintainer>
  <author email="joao.felix.mendes@tecnico.ulisboa.pt">Joao Mendes</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>trajectory_generation</depend>
  <depend>minkindr_conversions</depend>
  <depend>voxblox_ros</depend>
  <depend>std_srvs</depend>
  <depend>motion_planning</depend>
  <depend>cache_nodes</depend>
  <depend>mavros</depend>
  <depend>mavros_msgs</depend>

  <export>
  </export>

</package>
