<?xml version="1.0"?>
<package format="2">
  <name>process_pointcloud</name>
  <version>1.0.0</version>
  <description>The process_pointcloud package</description>

  <maintainer email="joao.felix.mendes@tecnico.ulisboa.pt">Joao Mendes</maintainer>

  <license>MIT</license>

  <author>Joao Mendes</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>mrs_lib</depend>

  <export>
  </export>

</package>
